--- a/index.html
+++ b/index.html
@@ -64,12 +64,7 @@
         <li>width</li>
         <li>height</li>
       </ul>
-      <img
-        src="pagini/img/decor.jpg"
-        alt="VINTAGE"
-        width="200"
-        height="150"
-      /><br />
+      <img src="./img/decor.jpg" alt="VINTAGE" width="200" height="150" /><br />
     </div>
     <div>
       <section>
