--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <html>
-  <!-- Informatii despre elementele html invatate, pe scurt aici despre elementele invatate in prima sesiune in principiu -->
   <head>
     <title>Despre html</title>
   </head>
@@ -142,13 +141,13 @@
       </p>
       <ul>
         <li>
-          <a href="pagini/formular.html"> <strong>FORMULAR</strong></a>
+          <a href="formular.html"> <strong>FORMULAR</strong></a>
         </li>
         <li>
-          <a href="pagini/tabele.html"><strong>TABELE</strong></a>
+          <a href="tabele.html"><strong>TABELE</strong></a>
         </li>
         <li>
-          <a href="pagini/multimedia.html"><strong> MULTIMEDIA</strong></a>
+          <a href="multimedia.html"><strong> MULTIMEDIA</strong></a>
         </li>
       </ul>
     </div>
